Added deploy and CNMAE

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "politicalGaps",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "gulp-gh-pages": "^0.5.4"
+  },
   "scripts": {
     "test": "gulp test"
   },
